# job-agent

./: .dockerignore  .env.example  .gitignore  Caddyfile  DATABASE_FIXES_AND_USER_PROFILE.md  DATABASE_INTEGRATION.md  DATABASE_SETUP.md  Dockerfile  Dockerfile.dev  Dockerfile.frontend  README.md  create_tables.py  docker-compose.prod.yml  docker-compose.yml  example_database_usage.py  pyproject.toml  setup.sh  start.sh  stop.sh  test_workflow.py
.cursor/: DEBUG_LOG.md  MEMO.md
.cursor/rules/: backend.mdc  deployment.mdc  frontend.mdc  index.mdc  master.mdc  testing.mdc
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_user_scoping_and_drop_cover_letters.py  003_change_user_id_to_string.py  004_add_user_has_access.py
data/: __init__.py
docs/: api-calls-guide.md  celery-implementation-plan.md  celery.md  deployment-memo.md  deployment.md  exa.md  frontend-step-by-step-implementation.md  implementation.md  initial-idea.md  langfuse.md  next-implementation.md  pre-deployment-setup-guide.md  predeployment.md  todo.md  upnext.md
docs/finished/: WORKFLOW_LOGS.md  continuous-development.md  (+6 more)
experiments/: main.py
frontend/: README.md  package-lock.json  package.json  proxy.ts
migrations/: add_workflow_execution_table.py
scripts/: grant-better-auth-permissions.sql  grant-frontend-read-permissions.sql  grant-two-users-existing-db.sql  init-db-users.sh  preflight-check.sh
src/: __init__.py  celery_app.py  config.py  langfuse_utils.py  workflow.py
test/: api.py  new_workflow.py  test_profiling_task.py  test_request.py  test_workflow.py
(+112 files in other folders)
