[project]
name = "job-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.70.0",
    "dotenv>=0.9.9",
    "exa-py>=2.1.1",
    "ipykernel>=7.1.0",
    "pydantic-ai>=1.47.0",
    "serpapi>=0.1.5",
    "pymupdf>=1.25.2",
    "rapidocr-onnxruntime>=1.4.1",
    "sqlalchemy>=2.0.41",
    "psycopg[binary]>=3.2.9",
    "nylas>=6.14.2",
    "jinja2>=3.1.6",
    "requests>=2.32.0",
    "fastapi>=0.128.0",
    "celery>=5.3.0",
    "redis[hiredis]>=5.0.0",
    "flower>=2.0.0",
    "nest-asyncio>=1.6.0",
    "sentry-sdk>=2.0.0",
    "uvicorn>=0.30.0",
    "langfuse>=2.0.0",
    "alembic>=1.14.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["test"]
